--- a/production/general_elements.html
+++ b/production/general_elements.html
@@ -150,7 +150,7 @@
                         <li><a href="#level1_2">Level One</a>
                         </li>
                     </ul>
-                  </li>                  
+                  </li>
                   <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
                 </ul>
               </div>
@@ -826,18 +826,18 @@
                   <div class="clearfix"></div>
                 </div>
                 <div class="x_content">
-                  <ul class="list-unstyled timeline">
-                    <li>
-                      <div class="block">
-                        <div class="tags">
-                          <a href="" class="tag">
-                            <span>Entertainment</span>
-                          </a>
-                        </div>
+                  <div class="list-unstyled timeline">
+                    <div class="timeline__item">
+                      <div class="timeline__item-inner">
                         <div class="block_content">
+                          <div class="tags">
+                            <a href="" class="tag">
+                              <span>Sport</span>
+                            </a>
+                          </div>
                           <h2 class="title">
-                                          <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
-                                      </h2>
+                              <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
+                          </h2>
                           <div class="byline">
                             <span>13 hours ago</span> by <a>Jane Smith</a>
                           </div>
@@ -845,18 +845,18 @@
                           </p>
                         </div>
                       </div>
-                    </li>
-                    <li>
-                      <div class="block">
-                        <div class="tags">
-                          <a href="" class="tag">
-                            <span>Entertainment</span>
-                          </a>
-                        </div>
+                    </div>
+                    <div class="timeline__item">
+                      <div class="timeline__item-inner">
                         <div class="block_content">
+                          <div class="tags">
+                            <a href="" class="tag">
+                              <span>Entertainment</span>
+                            </a>
+                          </div>
                           <h2 class="title">
-                                          <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
-                                      </h2>
+                              <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
+                          </h2>
                           <div class="byline">
                             <span>13 hours ago</span> by <a>Jane Smith</a>
                           </div>
@@ -864,18 +864,18 @@
                           </p>
                         </div>
                       </div>
-                    </li>
-                    <li>
-                      <div class="block">
-                        <div class="tags">
-                          <a href="" class="tag">
-                            <span>Entertainment</span>
-                          </a>
-                        </div>
+                    </div>
+                    <div class="timeline__item">
+                      <div class="timeline__item-inner">
                         <div class="block_content">
+                          <div class="tags">
+                            <a href="" class="tag">
+                              <span>Games</span>
+                            </a>
+                          </div>
                           <h2 class="title">
-                                          <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
-                                      </h2>
+                              <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
+                          </h2>
                           <div class="byline">
                             <span>13 hours ago</span> by <a>Jane Smith</a>
                           </div>
@@ -883,9 +883,46 @@
                           </p>
                         </div>
                       </div>
-                    </li>
-                  </ul>
-
+                    </div>
+                    <div class="timeline__item">
+                      <div class="timeline__item-inner">
+                        <div class="block_content">
+                          <div class="tags">
+                            <a href="" class="tag">
+                              <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, nemo.</span>
+                            </a>
+                          </div>
+                          <h2 class="title">
+                              <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
+                          </h2>
+                          <div class="byline">
+                            <span>13 hours ago</span> by <a>Jane Smith</a>
+                          </div>
+                          <p class="excerpt">Film festivals used to be do-or-die moments for movie makers. They were where you met the producers that could fund your project, and if the buyers liked your flick, they’d pay to Fast-forward and… <a>Read&nbsp;More</a>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="timeline__item">
+                      <div class="timeline__item-inner">
+                        <div class="block_content">
+                          <div class="tags">
+                            <a href="" class="tag">
+                              <span>Other</span>
+                            </a>
+                          </div>
+                          <h2 class="title">
+                              <a>Who Needs Sundance When You’ve Got&nbsp;Crowdfunding?</a>
+                          </h2>
+                          <div class="byline">
+                            <span>13 hours ago</span> by <a>Jane Smith</a>
+                          </div>
+                          <p class="excerpt">Film festivals used to be do-or-die moments for movie makers. They were where you met the producers that could fund your project, and if the buyers liked your flick, they’d pay to Fast-forward and… <a>Read&nbsp;More</a>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -1656,6 +1693,6 @@
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js"></script>
-	
+
   </body>
 </html>
